import app.TaskMindApp;

public final class Main {
    private Main() {
    }

    public static void main(String[] args) {
        TaskMindApp.main(args);
    }
}

